Update and rename 2023-03-31 to 2023-03-31.md

--- a/_publications/2023-03-31.md
+++ b/_publications/2023-03-31.md
@@ -3,6 +3,7 @@ title: 基于CNN的雷达辐射源信号开集识别方法
 collection: publications
 permalink: /publication/2023-03-31
 citation: [1]杨志远,张玉玺,孙进平等. 基于CNN的雷达辐射源信号开集识别方法[C]//中国电子学会数字信号处理专家委员会.
-第十四届全国DSP应用技术学术会议论文集.[出版者不详],2022:5.DOI:10.26914/c.cnkihy.2022.066299.
+第十四届全国DSP应用技术学术会议论文集.2022:5.DOI:10.26914/c.cnkihy.2022.066299.
+
 ---
 [Download paper here](https://kns.cnki.net/kcms2/article/abstract?v=3uoqIhG8C467SBiOvrai6ZrZfyGnw2H_RdsjEQmEf5UoODgnx8Nf3NtNfN-TsYqnI9y_V5akX2pzcZ71NC3x5A-KAo8BSxqu&uniplatform=NZKPT)
